subdir('Memory')
subdir('Observation')
subdir('OutputControl')
subdir('TimeSeries')

utilities_sources = files(
    'ArrayHandlers.f90',
    'ArrayReaders.f90',
    'BlockParser.f90',
    'Budget.f90',
    'BudgetFileReader.f90',
    'BudgetObject.f90',
    'BudgetTerm.f90',
    'comarg.f90',
    'compilerversion.f90',
    'Constants.f90',
    'defmacro.f90',
    'genericutils.f90',
    'HashTable.f90',
    'HeadFileReader.f90',
    'InputOutput.f90',
    'Iunit.f90',
    'kind.f90',
    'List.f90',
    'ListReader.f90',
    'Message.f90',
    'NameFile.f90',
    'OpenSpec.f90',
    'PackageBudget.f90',
    'Sim.f90',
    'SimVariables.f90',
    'SmoothingFunctions.f90',
    'sort.f90',
    'Sparse.f90',
    'StringList.f90',
    'Table.f90',
    'TableTerm.f90',
    'Timer.f90',
    'version.f90',
)
