model_groundwaterflow_sources = files(
    'gwf3.f90',
    'gwf3api8.f90',
    'gwf3buy8.f90',
    'gwf3chd8.f90',
    'gwf3csub8.f90',
    'gwf3dis8.f90',
    'gwf3disu8.f90',
    'gwf3disv8.f90',
    'gwf3drn8.f90',
    'gwf3evt8.f90',
    'gwf3ghb8.f90',
    'gwf3hfb8.f90',
    'gwf3ic8.f90',
    'gwf3lak8.f90',
    'gwf3maw8.f90',
    'gwf3mvr8.f90',
    'gwf3npf8.f90',
    'gwf3obs8.f90',
    'gwf3oc8.f90',
    'gwf3rch8.f90',
    'gwf3riv8.f90',
    'gwf3sfr8.f90',
    'gwf3sto8.f90',
    'gwf3tvbase8.f90',
    'gwf3tvk8.f90',
    'gwf3tvs8.f90',
    'gwf3uzf8.f90',
    'gwf3wel8.f90',
)
