model_groundwatertransport_sources = files(
    'gwt1.f90',
    'gwt1adv1.f90',
    'gwt1apt1.f90',
    'gwt1cnc1.f90',
    'gwt1dsp.f90',
    'gwt1fmi1.f90',
    'gwt1ic1.f90',
    'gwt1ist1.f90',
    'gwt1lkt1.f90',
    'gwt1mst1.f90',
    'gwt1mvt1.f90',
    'gwt1mwt1.f90',
    'gwt1obs1.f90',
    'gwt1oc1.f90',
    'gwt1sft1.f90',
    'gwt1src1.f90',
    'gwt1ssm1.f90',
    'gwt1uzt1.f90',
)
